# AutoScroll

./: .gitignore  README.md  build.bat  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  scroll.rs  single_instance.rs  state.rs  tray.rs  window.rs
